--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="dev.abgeo.bpongshuffler.MainActivity">
+    tools:context="dev.abgeo.bpongshuffler.Activity.MainActivity">
     <item
         android:id="@+id/action_clear"
         android:orderInCategory="100"
-        android:title="@string/action_clear"
+        android:title="@string/clear"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/about"
         app:showAsAction="never" />
 </menu>
