--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:title="@string/clear"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_shuffle"
+        android:orderInCategory="100"
+        android:title="@string/shuffle"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/about"
